--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ edition = "2018"
 [dependencies]
 wasm-bindgen = "0.2"
 seed = "0.9.2"
+string-join = "0.1.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
